--- a/index.html
+++ b/index.html
@@ -420,11 +420,33 @@ canvas{display:block;touch-action:none}
 
   <!-- スポイト -->
   <button id="eyedropperBtn" class="btn icon" title="キャンバスの色をスポイトで取得">
-    <svg viewBox="0 0 24 24" aria-hidden="true">
-      <path d="M5.5 18.5l3-3" />
-      <path d="M8.5 15.5l6.5-6.5 2.5 2.5-6.5 6.5z" />
-      <path d="M15 5l1.7-1.7a1.3 1.3 0 0 1 1.8 0l1.2 1.2a1.3 1.3 0 0 1 0 1.8L18 8" />
-      <path d="M6.5 20c.5-.9 1-1.5 1.7-2" />
+    <svg viewBox="0 0 24 24"
+      fill="none"
+      stroke="currentColor"
+      stroke-width="2.2"
+      stroke-linecap="round"
+      stroke-linejoin="round">
+      <!-- さらに拡大したバージョン（ほぼ最大サイズ） -->
+      <path d="M 16.5 1.4 A 4.25 4.25 0 0 1 21.6 6.6" />
+      <path d="M 16.5 1.4 L 12.2 7.1" />
+      <path d="M 21.6 6.6 L 15.3 10.4" />
+      <path d="M 12.2 7.1 L 11.1 7.1" />
+      <path d="M 11.1 7.1 L 15.3 11.3" />
+      <path d="M 15.3 11.3 L 15.3 10.4" />
+      <path d="M 12.2 8.3 L 11.1 9.3" />
+
+      <path d="M 7.6 13.7 A 3.35 3.35 0 0 1 11.1 9.3" />
+      <path d="M 13.5 11.3 A 3.35 3.35 0 0 1 9.6 14.9" />
+      <path d="M 13.5 11.3 L 14.5 10.4" />
+
+      <path d="M 2.4 19.6 L 7.6 13.7" />
+      <path d="M 2.4 19.6 L 3.5 20.7" />
+      <path d="M 3.5 20.7 L 9.6 14.9" />
+
+      <path d="M 8.4 12.7 L 9.6 14.9" />
+      <path d="M 7.6 14.9 L 8.4 16.0" />
+      <path d="M 6.6 16.0 L 7.6 17.1" />
+      <path d="M 12.2 10.4 L 13.5 11.3" />
     </svg>
   </button>
 
